--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,10 @@
 set -g status-position top
 set -g status-left-length 100
 set -g status-right-length 100
-# status-right layout. should be placed in ~/.tmux/plugins/nord-tmux/src/nord-status-content.conf
-# set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{sysstat_cpu}#[fg=brightblack,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{sysstat_mem}#[fg=brightblack,bg=brightblack,nobold,noitalics,nounderscore]#[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] %H:%M "
+# prefix highlight
+set -g @prefix_highlight_output_prefix "#[fg=colour214]#[bg=colour237]#[nobold]#[noitalics]#[nounderscore]#[bg=colour214]#[fg=colour237]"
+set -g @prefix_highlight_output_suffix ""
+set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
 
 # enable vi key-bindings for copy mode
 setw -g mode-keys vi
@@ -13,7 +15,7 @@ set -g prefix C-o
 unbind-key C-b
 
 # reload configuration file with prefix+r
-bind-key r source-file ~/.tmux.conf; display "Reloaded"
+bind-key r source-file ~/.tmux.conf\; display "Reloaded"
 
 # enable mouse mode
 set -g mouse on
@@ -24,7 +26,7 @@ bind-key -n M-l select-pane -R
 bind-key -n M-k select-pane -U
 bind-key -n M-j select-pane -D
 
-
+set -g @scroll-speed-num-lines-per-scroll 1
 
 
 
@@ -38,8 +40,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+# gruvbox colorscheme
+set -g @plugin 'egel/tmux-gruvbox'
 # Nord colorscheme
-set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'arcticicestudio/nord-tmux'
 # tmux-yank
 set -g @plugin 'tmux-plugins/tmux-yank'
 # tmux-copycat
@@ -47,6 +51,8 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 # tmux-prefix-highlight
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
