--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
+# true color
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 # status bar
 set -g status-position top
 set -g status-left-length 100
 set -g status-right-length 100
-# prefix highlight
-set -g @prefix_highlight_output_prefix "#[fg=colour214]#[bg=colour237]#[nobold]#[noitalics]#[nounderscore]#[bg=colour214]#[fg=colour237]"
-set -g @prefix_highlight_output_suffix ""
-set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
 
 # enable vi key-bindings for copy mode
 setw -g mode-keys vi
@@ -15,7 +15,7 @@ set -g prefix C-o
 unbind-key C-b
 
 # reload configuration file with prefix+r
-bind-key r source-file ~/.tmux.conf\; display "Reloaded"
+bind-key r source-file ~/.tmux.conf \; display "Reloaded"
 
 # enable mouse mode
 set -g mouse on
@@ -28,31 +28,15 @@ bind-key -n M-j select-pane -D
 
 set -g @scroll-speed-num-lines-per-scroll 1
 
-
-
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# gruvbox colorscheme
-set -g @plugin 'egel/tmux-gruvbox'
-# Nord colorscheme
-# set -g @plugin 'arcticicestudio/nord-tmux'
-# tmux-yank
 set -g @plugin 'tmux-plugins/tmux-yank'
-# tmux-copycat
 set -g @plugin 'tmux-plugins/tmux-copycat'
-# tmux-prefix-highlight
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'unidentifiedme/tmux-gruvbox'
+# source-file ~/Documents/Code/tmux-gruvbox/options.conf
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
