--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -108,8 +108,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    # family: "Niosevka Fixed"
-    family: "Niosevka Fixed Slab"
+    family: "Niosevka Fixed"
+    # family: "Niosevka Fixed Slab"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -120,8 +120,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    # family: "Niosevka Fixed"
-    family: "Niosevka Fixed Slab"
+    family: "Niosevka Fixed"
+    # family: "Niosevka Fixed Slab"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -132,8 +132,8 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    # family: "Niosevka Fixed"
-    family: "Niosevka Fixed Slab"
+    family: "Niosevka Fixed"
+    # family: "Niosevka Fixed Slab"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -144,8 +144,8 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    # family: "Niosevka Fixed"
-    family: "Niosevka Fixed Slab"
+    family: "Niosevka Fixed"
+    # family: "Niosevka Fixed Slab"
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
