Make emacs key bindings default across zsh and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,19 +7,20 @@ set -g status-position top
 set -g status-left-length 100
 set -g status-right-length 100
 
-# enable vi key-bindings for copy mode
-setw -g mode-keys vi
-
-# unbind C-b and bind C-o
-set -g prefix C-o
-unbind-key C-b
-
-# reload configuration file with prefix+r
-bind-key r source-file ~/.tmux.conf \; display "Reloaded"
+# enable vi key-bindings for copy mode.
+set -g mode-keys vi
+# enable emacs key-bindings for normal mode. e.g. C-a/C-e for navigate to head and tail of the line
+set -g status-keys emacs
 
 # enable mouse mode
 set -g mouse on
 
+# keybindings
+# unbind C-b and bind C-o
+set -g prefix C-o
+unbind-key C-b
+# reload configuration file with prefix+r
+bind-key r source-file ~/.tmux.conf \; display "Reloaded"
 # switch panes using Meta(Opt or Alt)+hjkl without prefix
 bind-key -n M-h select-pane -L
 bind-key -n M-l select-pane -R
